--- a/microblog/account/profile.html
+++ b/microblog/account/profile.html
@@ -7,12 +7,13 @@
 
     <!-- Global CSS (CSS rules you want applied to all pages) -->
     <link rel="stylesheet" href="global.css" />
+    <link rel="stylesheet" href="profile.css">
 
     <!-- Page-specific CSS -->
     <link rel="stylesheet" href="index.css" />
 
     <title>Microblog Network</title>
-    <!-- Run BEFORE page is finished loading (before window.onload - don't add the `defer` attribute): -->
+    <!-- Run BEFORE page is finished loading (before window.onload - don't add the defer attribute): -->
     <script src="auth.js"></script>
   </head>
   <body>
@@ -51,3 +52,4 @@
     <script src="profile.js"></script>
   </body>
 </html>
+
