--- a/microblog/account/profile.html
+++ b/microblog/account/profile.html
@@ -19,7 +19,9 @@
   <body>
     <header>
       <nav>
+        <a href="../index.html">Home</a>
         <a id="postlink" href="../posts/posts.html">Post</a>
+        <a id="createpostlink" href="../posts/create-post.html">Create Post</a>
         <button id="logoutlink" onclick="logout()">Logout</button>
       </nav>
     </header>
