--- a/microblog/account/register.html
+++ b/microblog/account/register.html
@@ -19,6 +19,8 @@
   <body>
     <header>
       <nav>
+        <a href="register.html">Registration</a>
+      <a href="login.html">Login</a>
         
       </nav>
     </header>
